# polymolt

./: .gitignore  Anchor.toml  DEPLOY.md  README.md  package-lock.json  package.json  setup.sh
.github/workflows/: deploy.yml
app/: next.config.js  package.json
app/components/: Chat.tsx  Leaderboard.tsx
app/pages/: _app.tsx  index.tsx
app/utils/: anchor.ts  idl.ts
programs/polymolt/: Cargo.toml
programs/polymolt/src/: lib.rs
server/: package.json
server/src/: server.ts
